[package]
name = "venture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bevy = { version = "0.7", features = ["jpeg"] }
palette = "0.6.0"
rand = "0.8.4"
smooth-bevy-cameras = "0.3.0"
